scripts/import-semester-plans-final-run1.log
/home/clawdy/.openclaw/workspace/crm_sgl/scripts/import-semester-plans-final.js:312
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1734:18)
    at Module._compile (node:internal/modules/cjs/loader:1777:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1934:10)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v25.5.0
